# S3_DB

./: .env  Cargo.toml  README.md  docker-compose.miniIO.yml  docker-compose.postgres.yml  init.sql
src/: main.rs  sync.rs  test_s3.rs  utils.rs
